fix issue with z-index of .header-2 and adjusted boxshadow format

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,13 @@
 :root {
-  --background-color: #e1e1e1;
+  --input-main-content-color: #f2f2f2;
   --left-sidebar-color: #0ea5e9;
   --left-sidebar-padding: 1rem;
   --left-sidebar-gap: 2rem;
-  --header-color: white;
+  --header-color: #FFFFFF;
   --header-gap: 2rem;
   --header-padding: 1rem 3rem;
   --header-height: 100px;
-  --border-shadow: 2 2 10px rgba(0, 0, 0, 0.2);
+  --border-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2);
   --card-background: linear-gradient(to right, #e0bcd7 0 3%, white 3% 100%);
   --card-gap: 1.5rem;
   --card-padding: 0 2rem;
@@ -87,7 +87,6 @@ li > img {
 }
 
 .header {
-  background-color: blue;
   grid-area: 1 / 2 / 2 / 4;
   display: flex;
   justify-content: space-between;
@@ -121,7 +120,7 @@ ul {
 }
 
 input {
-  background-color: var(--background-color);
+  background-color: var(--input-main-content-color);
   border: none;
   min-width: 40rem;
   border-radius: 20px;
@@ -148,8 +147,10 @@ input {
   justify-content: space-between;
   padding: var(--header-padding);
   align-items: center;
-  box-shadow: 5px 10px 8px #1f1e1e;
   background-color: var(--header-color);
+  height: var(--header-height);
+  z-index: 1;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
 
 .header-2-flex {
@@ -190,7 +191,7 @@ input {
 }
 
 .main-content {
-  background-color: var(--background-color);
+  background-color: var(--input-main-content-color);
   grid-area: 3 / 2 / 4 / 3;
   overflow-y: scroll;
 }
@@ -214,7 +215,6 @@ input {
 .proj-container > div {
   background: var(--card-background);
   border-radius: 10px;
-  box-shadow: var(--card-gap);
 }
 
 .proj-card {
@@ -222,6 +222,7 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: var(--border-shadow);
 }
 
 .card-icons {
@@ -237,7 +238,7 @@ input {
 }
 
 .right-sidebar {
-  background-color: var(--background-color);
+  background-color: var(--input-main-content-color);
   grid-area: 3 / 3 / 4 / 4;
 }
 
@@ -255,6 +256,7 @@ input {
   overflow-y: auto;
   border-radius: 5px;
   padding: 1.5rem;
+  box-shadow: var(--border-shadow);
 }
 
 .announcement-container > div:nth-child(even) {
@@ -276,6 +278,7 @@ input {
   border-radius: 5px;
   padding: 1.5rem;
   justify-content: space-between;
+  box-shadow: var(--border-shadow);
 }
 
 .trend-pfp {
